--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@
  * Copyright 2011-2018 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
  */
+ @import url(https://fonts.googleapis.com/css?family=Josefin+Sans:300,400);
 :root {
   --blue: #007bff;
   --indigo: #6610f2;
@@ -9526,46 +9527,4 @@ textarea.form-control {
     stroke-dasharray: 89, 200;
     stroke-dashoffset: -136px; } }
 
-
-    * {
-      margin: 0;
-      padding: 0;
-    }
-    html, body {
-      height: 100%;
-    }
-    section {
-      position: relative;
-      width: 100%;
-      height: 100%;
-    }
-    section::after {
-      position: absolute;
-      bottom: 0;
-      left: 0;
-      content: '';
-      width: 100%;
-      height: 80%;
-    }
-    .demo a {
-      position: absolute;
-      bottom: 20px;
-      left: 50%;
-      z-index: 2;
-      display: inline-block;
-      -webkit-transform: translate(0, -50%);
-      transform: translate(0, -50%);
-      color: black;
-      font : normal 400 20px/1 'Josefin Sans', sans-serif;
-      letter-spacing: .1em;
-      text-decoration: none;
-      transition: opacity .3s;
-    }
-    .demo a:hover {
-      opacity: .5;
-    }
-    
-    
-    #section01 a {
-      padding-top: 60px; 
-    }
+  
